# DynamicApk

./: README.md  settings.gradle
MyPluginLibrary1/: build.gradle
MyPluginLibrary1/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dynamicPlugin1-debug.apk  skin1-debug.apk
app/src/main/res/layout/: activity_goods_detail.xml  activity_main.xml  activity_ps_amn_hook.xml  activity_ps_change_skin.xml  activity_ps_dynamic_proxy.xml  activity_ps_dynamic_service.xml  activity_ps_instrumentation_hook.xml  activity_ps_instrumentation_hook_second.xml  activity_ps_main.xml  activity_ps_test1.xml  activity_ps_test2.xml
app/src/main/res/values/: strings.xml
baidumap/: build.gradle
baidumap/src/main/: AndroidManifest.xml
dynamicPlugin1/: build.gradle
dynamicPlugin1/src/main/: AndroidManifest.xml
dynamicPlugin1/src/main/assets/: plugin_config.json
gradle/wrapper/: gradle-wrapper.properties
pluginLib/: build.gradle
pluginLib/src/main/: AndroidManifest.xml
skin1/: build.gradle
skin1/src/main/: AndroidManifest.xml
userCenter/: CMakeLists.txt  build.gradle
userCenter/src/androidTest/java/com/dj/usercenter/: ExampleInstrumentedTest.java
userCenter/src/main/: AndroidManifest.xml
userCenter/src/main/cpp/: native-lib.cpp
userCenter/src/main/java/com/dj/usercenter/: LoginActivity.java  RegisterActivity.java
userCenter/src/main/res/layout/: activity_login.xml  activity_register.xml
userCenter/src/main/res/values/: strings.xml
userCenter/src/test/java/com/dj/usercenter/: ExampleUnitTest.java
(+65 files in other folders)
